2019-12-05  Dewei Zhu  <dewei_zhu@apple.com>

        Custom analysis task page should allow schedule any triggerable accepted tests.
        https://bugs.webkit.org/show_bug.cgi?id=204925

        Reviewed by Ryosuke Niwa.

        Fix a bug that subtest will not show on custom analysis task page if both itself and parent test are
        accepted by triggerable.
        Order test list in alphabetical order.

        * public/v3/components/custom-analysis-task-configurator.js:
        (CustomAnalysisTaskConfigurator.prototype._renderTriggerableTests):

2019-10-28  Dewei Zhu  <dewei_zhu@apple.com>

        Fix a bug that cannot unhide a platform.
        https://bugs.webkit.org/show_bug.cgi?id=203521

        Reviewed by Ryosuke Niwa.

        Before this change, the there is no value in POST when 'hidden' checkbox is unchecked.
        Then the update will fail because platform_hidden cannot be NULL.

        * public/admin/platforms.php: Adapted 'update_boolean_field'.
        * public/admin/triggerables.php: Adapted 'update_boolean_field'.
        * public/include/admin-header.php: Added 'update_boolean_field' helper function to set explict
        boolean value for update.

2019-10-25  Dewei Zhu  <dewei_zhu@apple.com>

        Add SSL support for peformance dashboard database connection.
        https://bugs.webkit.org/show_bug.cgi?id=203426

        Reviewed by Ryosuke Niwa.

        Performance dashboard should allow connecting Postgres database with SSL.

        * public/include/db.php: Add SSL configuration to connection string if specified.
        * tools/js/database.js: Add SSL configuration to connection string if specified.
        (Database.prototype._prepareSSLConfig):
        (Database.prototype.connect):
        * unit-tests/checkconfig.js: Added unit tests for optional ssl fields.

2019-10-22  Dewei Zhu  <dewei_zhu@apple.com>

        Refactor "builds" table "build_number" row to "build_tag" to fit more generic use cases.