@@ -1,3 +1,13 @@
+2019-12-15  Zhifei Fang  <zhifei_fang@apple.com>
+
+        Add power metric to perf dashboard
+        https://bugs.webkit.org/show_bug.cgi?id=205227
+
+        Reviewed by Ryosuke Niwa.
+
+        * public/v3/models/metric.js:
+        (Metric):
+
 2019-12-05  Dewei Zhu  <dewei_zhu@apple.com>
 
         Custom analysis task page should allow schedule any triggerable accepted tests.
